fixed header spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header a {
 
 header nav {
     float: right;
-    margin: 7px 0;
+    margin: 10px 0;
 }
 
 header nav ul li {
@@ -38,7 +38,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-    margin: 0px;
+    margin: 15px;
     font-weight: lighter;
     font-size: 22px;
 }
